# matrix-multiplication

./: CMakeLists.txt  histogram.csv  histogrammer.py  log.csv  main.cpp  matrix_mpi.hpp  notes.md  plotter.py  readme.md  requirements.txt  run_tests.sh
results/: parallel_results_12proc.csv
